--- a/src/main/resources/templates/greeting.hbs
+++ b/src/main/resources/templates/greeting.hbs
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    <p th:text="${greeting}">Yo</p>
+    <p>{{greeting}}</p>
 </body>
 </html>
