--- a/src/main/resources/templates/greeting/index.hbs
+++ b/src/main/resources/templates/greeting/index.hbs
@@ -1,10 +1,4 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <title>Getting Started: Serving Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
+{{#partial "content"}}
     <table>
       <thead>
         <tr>
@@ -19,5 +13,6 @@
         {{/greetings}}
       </tbody>
     </table>
-</body>
-</html>
+{{/partial}}
+
+{{> layouts/base title="All greetings"}}
