--- a/src/main/resources/templates/greeting/show.hbs
+++ b/src/main/resources/templates/greeting/show.hbs
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <title>Getting Started: Serving Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
-    <p>{{greeting}}</p>
-</body>
-</html>
+{{#partial "content"}}
+  <p>{{greeting}}</p>
+{{/partial}}
+
+{{> layouts/base title="A greeting"}}
