Add a link to create a greeting from the list view.

--- a/src/main/resources/templates/greeting/index.hbs
+++ b/src/main/resources/templates/greeting/index.hbs
@@ -13,6 +13,10 @@
     {{/greetings}}
   </tbody>
 </table>
+
+<p>
+  <a href="/greeting/new">Add a new greeting</a>
+</p>
 {{/partial}}
 
 {{> layouts/base title="All greetings"}}
