Add a "back" link to the greeting display page.

--- a/src/main/resources/templates/greeting/show.html.hbs
+++ b/src/main/resources/templates/greeting/show.html.hbs
@@ -1,5 +1,7 @@
 {{#partial "content"}}
   <p>{{greeting}}</p>
+  
+  <a href="/greeting">Back</a>
 {{/partial}}
 
 {{> layouts/base title="A greeting"}}
