Add a cancel option when adding a new greeting.

--- a/src/main/resources/templates/greeting/new.html.hbs
+++ b/src/main/resources/templates/greeting/new.html.hbs
@@ -2,7 +2,7 @@
   <p>New Greeting</p>
   <form action="/greeting/" method="post">
     <input type="text" name="template"></input>
-    <input type="submit"></input>
+    <input type="submit"></input> <a href="/greeting">Cancel</a>
   </form>
 {{/partial}}
 
