--- a/src/main/resources/templates/layouts/base.html.hbs
+++ b/src/main/resources/templates/layouts/base.html.hbs
@@ -9,11 +9,19 @@
     {{/if}}
   </title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel='stylesheet' href='/webjars/bootstrap/3.3.7/css/bootstrap.min.css'>
   {{#block "head"}}
   {{/block}}
 </head>
+
 <body>
-  {{#block "content"}}
-  {{/block}}
+  <div class="container">
+    {{#block "content"}}
+    {{/block}}
+  </div>
+
+  <script type="text/javascript" src="/webjars/jquery/2.2.4/jquery.min.js"></script>
+  <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
