Style the greetings list page.

--- a/src/main/resources/templates/greeting/index.html.hbs
+++ b/src/main/resources/templates/greeting/index.html.hbs
@@ -1,5 +1,7 @@
 {{#partial "content"}}
-<table>
+<h1>All greetings</h1>
+
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Id</th>
@@ -15,7 +17,7 @@
 </table>
 
 <p>
-  <a href="/greeting/new">Add a new greeting</a>
+  <a class="btn btn-primary" role="button" href="/greeting/new">Add a new greeting</a>
 </p>
 {{/partial}}
 
