--- a/src/main/resources/templates/greeting/show.html.hbs
+++ b/src/main/resources/templates/greeting/show.html.hbs
@@ -1,7 +1,11 @@
 {{#partial "content"}}
-  <p>{{greeting}}</p>
-  
-  <a href="/greeting">Back</a>
+  <h1>Greeting</h1>
+
+  <blockquote>
+    <p>{{greeting}}</p>
+  </blockquote>
+
+  <a class="btn btn-primary" role="button" href="/greeting">Back</a>
 {{/partial}}
 
 {{> layouts/base title="A greeting"}}
