--- a/src/main/resources/templates/layouts/base.html.hbs
+++ b/src/main/resources/templates/layouts/base.html.hbs
@@ -10,7 +10,7 @@
   </title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='stylesheet' href='/webjars/bootstrap/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css">
   {{#block "head"}}
   {{/block}}
 </head>
