Add Font Awesome-ness to the greetings index.

--- a/src/main/resources/templates/greeting/index.html.hbs
+++ b/src/main/resources/templates/greeting/index.html.hbs
@@ -17,7 +17,7 @@
 </table>
 
 <p>
-  <a class="btn btn-primary" role="button" href="/greeting/new">Add a new greeting</a>
+  <a class="btn btn-primary" role="button" href="/greeting/new"><i class="fa fa-plus" aria-hidden="true"></i> Add a new greeting</a>
 </p>
 {{/partial}}
 
