Add Font Awesome-ness to the new greeting form.

--- a/src/main/resources/templates/greeting/new.html.hbs
+++ b/src/main/resources/templates/greeting/new.html.hbs
@@ -14,8 +14,8 @@
       {{/if}}
     </div>
 
-    <button class="btn btn-primary" type="submit">Submit</button>
-    <a class="btn btn-danger" role="button" href="/greeting">Cancel</a>
+    <button class="btn btn-primary" type="submit"><i class="fa fa-bookmark-o" aria-hidden="true"></i> Save</button>
+    <a class="btn btn-danger" role="button" href="/greeting"><i class="fa fa-ban" aria-hidden="true"></i> Cancel</a>
   </form>
 {{/partial}}
 
