Add Font Awesome-ness to the show greeting page.

--- a/src/main/resources/templates/greeting/show.html.hbs
+++ b/src/main/resources/templates/greeting/show.html.hbs
@@ -5,7 +5,7 @@
     <p>{{greeting}}</p>
   </blockquote>
 
-  <a class="btn btn-primary" role="button" href="/greeting">Back</a>
+  <a class="btn btn-primary" role="button" href="/greeting"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
 {{/partial}}
 
 {{> layouts/base title="A greeting"}}
