--- a/src/main/resources/templates/greeting/new.html.hbs
+++ b/src/main/resources/templates/greeting/new.html.hbs
@@ -15,7 +15,7 @@
     </div>
 
     <button class="btn btn-primary" type="submit"><i class="fa fa-bookmark-o" aria-hidden="true"></i> Save</button>
-    <a class="btn btn-danger" role="button" href="/greeting"><i class="fa fa-ban" aria-hidden="true"></i> Cancel</a>
+    <a class="btn btn-warning" role="button" href="/greeting"><i class="fa fa-ban" aria-hidden="true"></i> Cancel</a>
   </form>
 {{/partial}}
 
