Use thymeleaf layout system.

--- a/src/main/resources/templates/greeting/new.html
+++ b/src/main/resources/templates/greeting/new.html
@@ -1,14 +1,11 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="layouts/default">
 <head>
-  <title>A greeting</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/webjars/font-awesome/css/font-awesome.min.css" />
+  <title>New</title>
 </head>
 <body>
-  <div class="container">
+  <div layout:fragment="content">
     <h1>Add a new greeting</h1>
     
     <form action="#" th:action="@{/greeting}" th:object="${greeting}" method="post">
@@ -22,8 +19,5 @@
       <a class="btn btn-warning" role="button" href="/greeting"><i class="fa fa-ban" aria-hidden="true"></i> Cancel</a>
     </form>
   </div>
-
-  <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-  <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
