--- a/src/main/resources/templates/greeting/index.html
+++ b/src/main/resources/templates/greeting/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="layouts/default">
 <head>
-  <title>All greetings</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/webjars/font-awesome/css/font-awesome.min.css" />
+  <title>All</title>
 </head>
 <body>
-  <div class="container">
+  <div layout:fragment="content">
     <h1>All greetings</h1>
 
     <table class="table table-striped table-hover">
@@ -34,8 +31,5 @@
       <a class="btn btn-primary" role="button" href="/greeting/new"><i class="fa fa-plus" aria-hidden="true"></i> Add a new greeting</a>
     </p>
   </div>
-
-  <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-  <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
