Call layouts correctly in the decorate processor.

--- a/src/main/resources/templates/greeting/show.html
+++ b/src/main/resources/templates/greeting/show.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorate="layouts/default">
+  layout:decorate="~{layouts/default}">
 <head>
   <title>A greeting</title>
 </head>
