--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -16,7 +16,7 @@
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#hello-navbar-collapse" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
         </button>
-        <a class="navbar-brand" href="/">Hello MVC</a>
+        <a class="navbar-brand" th:href="@{/}">Hello MVC</a>
       </div>
 
       <div class="collapse navbar-collapse" id="hello-navbar-collapse">
