--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -23,6 +23,16 @@
         <ul class="nav navbar-nav">
           <li><a th:href="@{/greeting}">Greetings</a></li>
         </ul>
+        <ul class="nav navbar-nav navbar-right" sec:authorize="!isAuthenticated()">
+          <li><p class="navbar-text"><i class="fa fa-user" aria-hidden="true"></i> Not signed in</p></li>
+          <li>
+            <div>
+              <a class="btn btn-default navbar-btn" role="button" th:href="@{/sign-in}">
+                <i class="fa fa-sign-in" aria-hidden="true"></i> Sign in
+              </a>
+            </div>
+          </li>
+        </ul>
         <ul class="nav navbar-nav navbar-right" sec:authorize="isAuthenticated()">
           <li><p class="navbar-text"><i class="fa fa-user" aria-hidden="true"></i> Signed in as <span sec:authentication="name"></span></p></li>
           <li>
