Update the text on the home page.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,9 +12,9 @@
 
       <p>Test various elements of MVC development in Java using:</p>
       <ul>
-        <li><a href="http://projects.spring.io/spring-framework/">The Spring Framework</a></li>
-        <li><a href="http://projects.spring.io/spring-security/">Spring Security</a></li>
-        <li><a href="http://www.thymeleaf.org/">Thymeleaf</a></li>
+        <li><a href="http://projects.spring.io/spring-framework/">The Spring Framework</a>.</li>
+        <li><a href="http://projects.spring.io/spring-security/">Spring Security</a>.</li>
+        <li><a href="http://www.thymeleaf.org/">Thymeleaf</a> templates and layouts.</li>
       </ul>
       <p>Try out the <a th:href="@{/greeting}">Greetings</a> page.</p>
     </div>
