Update to latest version of Font Awesome.

--- a/src/main/resources/templates/greeting/index.html
+++ b/src/main/resources/templates/greeting/index.html
@@ -32,7 +32,7 @@
     </table>
 
     <p>
-      <a class="btn btn-primary" role="button" href="/greeting/new"><i class="fa fa-plus" aria-hidden="true"></i> Add a new greeting</a>
+      <a class="btn btn-primary" role="button" href="/greeting/new"><i class="fas fa-plus" aria-hidden="true"></i> Add a new greeting</a>
     </p>
   </div>
 </body>
