--- a/src/main/resources/templates/greeting/new.html
+++ b/src/main/resources/templates/greeting/new.html
@@ -15,8 +15,8 @@
         <p class="text-danger" th:if="${#fields.hasErrors('template')}" th:errors="*{template}">errors</p>
       </div>
     
-      <button class="btn btn-primary" type="submit"><i class="fa fa-bookmark-o" aria-hidden="true"></i> Save</button>
-      <a class="btn btn-warning" role="button" href="/greeting"><i class="fa fa-ban" aria-hidden="true"></i> Cancel</a>
+      <button class="btn btn-primary" type="submit"><i class="fas fa-bookmark" aria-hidden="true"></i> Save</button>
+      <a class="btn btn-warning" role="button" href="/greeting"><i class="fas fa-ban" aria-hidden="true"></i> Cancel</a>
     </form>
   </div>
 </body>
