--- a/src/main/resources/templates/greeting/show.html
+++ b/src/main/resources/templates/greeting/show.html
@@ -13,8 +13,8 @@
     </blockquote>
 
     <form th:action="@{/greeting/{num}(num=${id})}" th:method="delete">
-      <a class="btn btn-primary" role="button" th:href="@{/greeting}"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</a>
-      <button type="submit" class="btn btn-danger"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</button>
+      <a class="btn btn-primary" role="button" th:href="@{/greeting}"><i class="fas fa-arrow-left" aria-hidden="true"></i> Back</a>
+      <button type="submit" class="btn btn-danger"><i class="fas fa-trash" aria-hidden="true"></i> Delete</button>
     </form>
   </div>
 </body>
