--- a/src/main/resources/templates/security/sign-in.html
+++ b/src/main/resources/templates/security/sign-in.html
@@ -19,8 +19,8 @@
         <input class="form-control" type="password" name="password" id="password" autofocus="autofocus" />
       </div>
       
-      <button class="btn btn-primary" type="submit"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign in</button>
-      <a class="btn btn-warning" role="button" href="/"><i class="fa fa-ban" aria-hidden="true"></i> Cancel</a>
+      <button class="btn btn-primary" type="submit"><i class="fas fa-sign-in-alt" aria-hidden="true"></i> Sign in</button>
+      <a class="btn btn-warning" role="button" href="/"><i class="fas fa-ban" aria-hidden="true"></i> Cancel</a>
     </form>
   </div>
 </body>
