--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
         <li><a href="https://spring.io/projects/spring-security/">Spring Security v5</a>.</li>
         <li><a href="https://www.thymeleaf.org/">Thymeleaf</a> templates and layouts.</li>
       </ul>
-      <p class="lead">Try out the <a th:href="@{/greeting}">Greetings</a> page.</p>
+      <p class="lead">Try out the <a th:href="@{/greetings}">Greetings</a> page.</p>
     </div>
   </div>
 </body>
