--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -19,7 +19,7 @@
       
     <div class="collapse navbar-collapse" id="hello-navbar-collapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" th:href="@{/greeting}">Greetings</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/greetings}">Greetings</a></li>
       </ul>
       <div class="navbar-text" sec:authorize="!isAuthenticated()">
       	<i class="fas fa-user" aria-hidden="true"></i> Not signed in |
