--- a/src/main/resources/templates/greetings/show.html
+++ b/src/main/resources/templates/greetings/show.html
@@ -12,8 +12,8 @@
       <p th:text="${greeting}">Hello, World!</p>
     </blockquote>
 
-    <form th:action="@{/greeting/{num}(num=${id})}" th:method="delete">
-      <a class="btn btn-primary" role="button" th:href="@{/greeting}"><i class="fas fa-arrow-left" aria-hidden="true"></i> Back</a>
+    <form th:action="@{/greetings/{num}(num=${id})}" th:method="delete">
+      <a class="btn btn-primary" role="button" th:href="@{/greetings}"><i class="fas fa-arrow-left" aria-hidden="true"></i> Back</a>
       <button type="submit" class="btn btn-danger"><i class="fas fa-trash" aria-hidden="true"></i> Delete</button>
     </form>
   </div>
