Update to Font Awesome 6.

--- a/src/main/resources/templates/greetings/not_found.html
+++ b/src/main/resources/templates/greetings/not_found.html
@@ -13,7 +13,7 @@
     </p>
     
     <p>
-      <a class="btn btn-primary" role="button" th:href="@{/greetings}"><i class="fas fa-arrow-left" aria-hidden="true"></i> Greetings list</a>
+      <a class="btn btn-primary" role="button" th:href="@{/greetings}"><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Greetings list</a>
     </p>
   </div>
 </body>
