--- a/src/main/resources/templates/greetings/index.html
+++ b/src/main/resources/templates/greetings/index.html
@@ -32,7 +32,7 @@
     </table>
 
     <p>
-      <a class="btn btn-primary" role="button" href="/greetings/new"><i class="fas fa-plus" aria-hidden="true"></i> Add a new greeting</a>
+      <a class="btn btn-primary" role="button" href="/greetings/new"><i class="fa-solid fa-plus" aria-hidden="true"></i> Add a new greeting</a>
     </p>
   </div>
 </body>
