Update Bootstrap to version 5.0.2.
This will quieten a security warning for Bootstrap 4.x. It also means we
don't need JQuery by default anymore.

Minor changes to the HTML templates were required:
 * Jumbotron deprecated, but replaced.
 * Alerts and alert buttons updated.
 * Navbar updated.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div layout:fragment="content">
-    <div class="jumbotron">
+    <div class="p-5 mb-4 bg-light rounded-3">
       <h1 class="display-4">Spring MVC Example Application</h1>
 
       <p class="lead">Test various elements of MVC development in Java.</p>
